# AI

./: .gitignore  README.md
NeuralNetworkStuff/: NeuralNetworkStuff.sln
NeuralNetworkStuff/Code/: Layer.cpp  Layer.h  Main.cpp
NeuralNetworkStuff/Debug/: NeuralNetworkStuff.ilk
NeuralNetworkStuff/NeuralNetworkStuff/: Activation.cpp  Activation.h  CMakeLists.txt  ConvolutionFilter.cpp  ConvolutionFilter.h  Layer.cpp  Layer.h  Main.cpp  Misc.cpp  Misc.h  NNAnalysis.m  NeuralNetworkStuff.vcxproj  NeuralNetworkStuff.vcxproj.filters  Normalize.cpp  Normalize.h  Pool.cpp  Pool.h  analyze.asv  analyze.m  libraries.h
NeuralNetworkStuff/NeuralNetworkStuff/Debug/: layer.new.obj.enc  vc142.idb
NeuralNetworkStuff/NeuralNetworkStuff/Debug/NeuralNe.DD3876B8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NeuralNetworkStuff.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NeuralNetworkStuff/NeuralNetworkStuff/Testing_Data/: Script.ps1
NeuralNetworkStuff/NeuralNetworkStuff/Training_Data/: Script.ps1
NeuralNetworkStuff/NeuralNetworkStuff/x64/Debug/: convolutionfilter.new.obj.enc  layer.new.obj.enc  main.new.obj.enc  pool.new.obj.enc  vc142.idb
NeuralNetworkStuff/NeuralNetworkStuff/x64/Debug/NeuralNe.DD3876B8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NeuralNetworkStuff.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NeuralNetworkStuff/x64/Debug/: NeuralNetworkStuff.ilk
